// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  id="albums"
  name="albums"
  path="/albums/undefined"
  render={[Function]}
/>
`;

exports[`renders correctly with id 1`] = `
<div
  id="albums"
  name="albums"
  path="/albums/123"
  render={[Function]}
/>
`;
